feat(encryption): ciphertext format + SSTable footer scope signalling (WD-02)
Implements the encryption.primitives-lifecycle DRAFT spec section covered
by WD-02 of the implement-encryption-lifecycle work group: SSTable footer
scope metadata, sealed Table trust boundary, per-field envelope DEK version
prefix, and the engine API for encryption lifecycle.

== Spec amendment

sstable.footer-encryption-scope v4 -> v5:
  R8e widened from one-permits to two-permits sealed declaration covering
  both jlsm.engine.internal.CatalogTable (single-node) and
  jlsm.engine.cluster.internal.CatalogClusteredTable (clustered). v4 missed
  that ClusteredTable was already a public production Table impl. R8f
  discipline applies uniformly to both internal classes; R6c language
  reflects two catalog-mediated trust paths; R8g extends to existing
  cluster test stubs (RecordingTable, StubTable, StubTableImpl,
  PermissiveStubTable migrate to the test-only TestTableStubs factory).

== Closed obligations

- OB-ciphertext-envelope-01: 4-byte big-endian DEK version prefix on every
  envelope variant (Opaque/Deterministic/OrderPreserving/DistancePreserving).
- OB-ciphertext-envelope-02: cross-tier byte-identity integration test
  (MemTable -> WAL -> SSTable) lands in CrossTierEnvelopeIdentityTest.
- OB-ciphertext-envelope-03: hex-literal BE encoding pin for DCPE seed +
  per-lane encrypted floats lands in DcpeSapEncryptorTest.

== Public API changes (jlsm-engine)

- Table is now a sealed interface in jlsm.engine permitting only
  jlsm.engine.internal.CatalogTable and
  jlsm.engine.cluster.internal.CatalogClusteredTable. External code can
  no longer implement Table.
- jlsm.engine.cluster.ClusteredTable (formerly exported, public) is
  relocated to jlsm.engine.cluster.internal.CatalogClusteredTable.
  ClusteredEngine.createTable / .getTable return Table (not ClusteredTable).
- TableMetadata gains a 5th component Optional<EncryptionMetadata>
  encryption. Backward-compat 4-arg constructor preserv